Added MySQL support with XAMPP

--- a/blog/.gitignore
+++ b/blog/.gitignore
@@ -10,3 +10,8 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
+###> docker ###
+.idea
+.docker/data/
+###< docker ###
